--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
-  "name": "raintest",
+  "name": "bxm",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "DESKTOP-8LQL160\\DamiaoAdmin <zhaomiao@czb365.com>",
+  "author": "LiuCaiHe <at@lang.so>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
+    "testing": "node build/testing.js",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "axios": "^0.16.2",
+    "babel-polyfill": "^6.26.0",
+    "fastclick": "^1.0.6",
+    "fundebug-javascript": "^0.3.1",
+    "md5": "^2.2.1",
+    "normalize.css": "^7.0.0",
+    "raven-js": "^3.17.0",
+    "vue": "^2.3.3",
+    "vue-count-to": "^1.0.5",
+    "vue-infinite-loading": "^2.1.3",
+    "vue-router": "^2.6.0",
+    "vue-server-renderer": "^2.4.2",
+    "yarn": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -24,15 +36,16 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
+    "compression-webpack-plugin": "^1.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
+    "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
-    "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
@@ -42,21 +55,26 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.8",
-    "vue-loader": "^13.0.4",
+    "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
+    "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "weixin-js-sdk": "^1.2.0"
   },
   "engines": {
     "node": ">= 4.0.0",
@@ -66,5 +84,8 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": "index.js",
+  "repository": "git@git.czb365.com:web/czb-akeyrefuel.git",
+  "license": "MIT"
 }
